# agentclash-evals

./: LICENSE  README.md
.github/workflows/: ci.yml
docs/evaltest/: cli.md  pytest.md  typescript-alpha-spike.md
examples/evaltest/python/: test_refund_agent.py
python/agentclash_eval/: README.md  pyproject.toml
python/agentclash_eval/src/agentclash_eval/: __init__.py  evaluate.py  models.py  normalize.py  pytest_plugin.py  report.py  runner.py
python/agentclash_eval/src/agentclash_eval/adapters/: __init__.py  openai.py
python/agentclash_eval/src/agentclash_eval/judge/: __init__.py  metrics.py  parser.py  provider.py
python/agentclash_eval/src/agentclash_eval/metrics/: __init__.py  base.py  contains.py  json_path.py  limits.py  output_schema.py  regex_match.py  tools.py
python/agentclash_eval/tests/: test_adapters.py  test_evaluate.py  test_judge.py  test_metrics.py  test_package.py  test_pytest_plugin.py
schemas/evaltest/: README.md  agent-result.schema.json  eval-report.schema.json
schemas/evaltest/fixtures/: all-pass.json  config-error.json  metric-failure.json  multi-turn.json  provider-error.json
typescript/evals/: package-lock.json  package.json  tsconfig.json
typescript/evals/src/: index.ts
typescript/evals/tests/: evals.test.ts
