[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentclash-evals"
version = "0.1.0"
description = "Local pre-deploy agent eval assertions for CI/CD"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "AgentClash" }]
keywords = ["agent", "eval", "llm", "testing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "jsonschema>=4.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentclash_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
